feat: add tab completer with factions' name